# dotfiles.nix

./: .editorconfig  .gitignore  .harper-dictionary.txt  .sops.yaml  Makefile  Makefile.old  README.md  flake.lock.backup  flake.lock.orig  flake.nix  flake.nix.orig  format.mk  justfile  renovate.json  settings.yaml  test_color.sh  tmp  update-flake-revs.sh  update.sh  vars.yaml
.github/: todo-manager.js  todo-tracking.json
home/: copy-application-bundles.nix  default.nix  stylix.nix  vars.nix
hosts/: .default.nix.swp  default.nix
lib/: copy-apps.nix  custom-icons.nix  defaults.nix  mksystem.nix  overlays.nix
machines/: nix.nix  shared-darwin.nix  shared-global.nix  shared.nix
modules/: default.nix  defaults.nix  nix.nix  read_settings.nix
modules/apps/repodex/: Cargo.toml  README.md  clone.fish  create.fish  delete.fish  doctor.fish  fetch_all.fish  jump.fish  jump_preview.sh  justfile  open.fish  status.fish  test.fish
modules/apps/repodex/src/: main.rs  settings.rs
modules/apps/repodex/src/features/: create.rs  get.rs  list.rs  migrate.rs  mod.rs  repo_url.rs  rm.rs
modules/apps/repodex/src/tui/: app.rs  mod.rs  repo_info.rs
nix/: core.nix  custom-icons.nix  default.nix  input-modules.nix  overlays.nix  utils.nix
pkgs/: apple-music.nix  default.nix
scripts/: backup-age-key.sh  colors.sh  flake-rollback.fish  install.sh  lint.sh  restore-age-key.sh  system-bootstrap.sh  system-deploy.sh  system-install.sh  update-flake-revs.sh
secrets/: git.yaml
shells/: c.nix  default.nix  latex.nix  node.nix  python.nix  rust.nix
templates/: default.nix  (+4 more)
(+562 files in other folders)
