[package]
name = "repodex"
version = "1.0.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
clap_complete = "4.6.0"
clap_mangen = "0.2.33"
color-eyre = "0.6.5"
colored = "3.1.1"
confy = { version = "2.0.0", default-features = false, features = ["yaml_conf"] }
crossterm = "0.29.0"
dialoguer = { version = "0.12.0", features = ["fuzzy-select"]}
git2 = "0.20.4"
ignore = "0.4.25"
nucleo-matcher = "0.3.1"
ratatui = "0.30.0"
serde = { version = "1.0.228", features = ["derive"]}
serde_yaml = "0.9.34"
tui-widget-list = "0.15.0"
users = "0.11.0"
which = "8.0.2"


[build-dependencies]
clap = { version = "4.6.0", features = ["derive"] }
clap_complete = "4.6.0"
clap_mangen = "0.2.33"
tempfile = "3.27.0"
